# DoylesSDK-dev

./: .gitignore  README.md  pyproject.toml
.github/workflows/: prerelease-build.yml  release-build.yml  test.yml
.zed/: settings.json
src/: README
src/doyles_sdk/: __init__.py  _auth.py  _classes.py  _exceptions.py  _metaclass.py  _mixins.py  _splunkbase.py  _utilities copy.py  _utilities.py  _wrappers.py
src/doyles_sdk/cli/: __init__.py
src/doyles_sdk/cli/apps/: __init__.py  _base_app.py  aws_ip_list_app.py  create_certs_app.py  create_cli_app.py  create_module_app.py  create_s2_config_app.py  create_ssl_inputs_app.py  get_shc_members.py  help_app.py  info.py  make_hf_routing_app.py
tests/: README  test_utilities.py
tests/disabled/: test_commands.py
tests/fixtures/: README
