[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "doyles_sdk"
authors = [
    {name = "Michael Doyle", email = "doymi01@gmail.com"},
]
description = "Common Application Framework"
requires-python = ">=3.9"
dependencies = [
    "chardet",
    "dnspython",
    "importlib_metadata",
    "keyring",
    "lxml",
    "psutil",
    "requests"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "build"
]

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--cov=src/doyles_magic_tool_kit --cov-report=html --cov-report=term"
# addopts = "--cov=src/doyles_magic_tool_kit --cov-report=html"
testpaths = ["tests"]
norecursedirs = ["disabled"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["doyles_sdk*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
# "magic_script" = ["factories/*.json"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
git_describe_command = "git describe --dirty --tags --match v[0-9]*"
fallback_version = "0.0.0"

[project.scripts]
doyles = "doyles_sdk.cli:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests"]
reportDeprecated = "none"
reportAttributeAccessIssue = "information"
reportOptionalSubscript = 'information'
